[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/Magnet.png" type="Texture" id=1]
[ext_resource path="res://PowerUps/Magnet.gd" type="Script" id=2]
[ext_resource path="res://Sounds/magnet-range.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sprites/light.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 205.019

[node name="Magnet" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )
alpha = 0.6

[node name="MagneticRange" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hint" type="TextureRect" parent="MagneticRange"]
modulate = Color( 1, 1, 1, 0.254902 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.5
margin_top = -220.5
margin_right = 222.5
margin_bottom = 220.5
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Sprite"]
margin_left = -12.0
margin_top = -25.2063
margin_right = 13.0
margin_bottom = -21.2063
color = Color( 1, 0.984314, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Sprite"]
margin_left = 2.0
margin_top = -34.0
margin_right = 23.0
margin_bottom = -30.0
rect_rotation = 90.0
color = Color( 1, 0.984314, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 50, 0 )
width = 2.0
default_color = Color( 0.87451, 0.85098, 0.215686, 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0
pitch_scale = 2.04
autoplay = true

[connection signal="body_entered" from="." to="." method="_on_Magnet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Magnet_body_exited"]
